Moving keys in Grease Pencil Dopesheet crashes Blender #90795

Closed
opened 2021-08-20 10:07:36 +02:00 by Piotr Nikov · 11 comments

System Information
Operating system: WIN10 & MacOs 11.5
Graphics card: Non relevant

Blender Version
Broken: Latest Alpha (20th August)
Worked: Alpha dated from the 19th of August
Caused by b0d9e6797f

Short description of error
Moving keys in Grease Pencil Dopesheet crashes Blender

Exact steps for others to reproduce the error
. In Grease Pencil mode draw a couple of keyframes.
. Select and move keyframes in Grease Pencil Dopesheet.
. Crash.
Tried this on Mac and Win10.
Thanks!

Piotr

**System Information** Operating system: WIN10 & MacOs 11.5 Graphics card: Non relevant **Blender Version** Broken: Latest Alpha (20th August) Worked: Alpha dated from the 19th of August Caused by b0d9e6797f **Short description of error** Moving keys in Grease Pencil Dopesheet crashes Blender **Exact steps for others to reproduce the error** . In Grease Pencil mode draw a couple of keyframes. . Select and move keyframes in Grease Pencil Dopesheet. . Crash. Tried this on Mac and Win10. Thanks! Piotr
Author

Added subscriber: @Pyer

Added subscriber: @Pyer
Author

Added subscriber: @antoniov

Added subscriber: @antoniov
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

The crash is in applyTimeTranslateValue function.

image.png

The crash is in `applyTimeTranslateValue` function. ![image.png](https://archive.blender.org/developer/F10295754/image.png)

Added subscriber: @mano-wii

Added subscriber: @mano-wii

@mano-wii I think the crash is related to commit 119d53263f

Edit: I'm going to bisect because this is not the commit that introduced the bug.

@mano-wii I think the crash is related to commit 119d53263f0d Edit: I'm going to bisect because this is not the commit that introduced the bug.

@mano-wii I have found the commit that introduced the crash: b0d9e6797f Fix #87173: wrong Auto-Snap in animation editors

@mano-wii I have found the commit that introduced the crash: b0d9e6797fb8 Fix #87173: wrong Auto-Snap in animation editors
Germano Cavalcante was assigned by Antonio Vazquez 2021-08-20 10:43:37 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

This issue was referenced by ef502127dd

This issue was referenced by ef502127ddc0f5a06e76cb2f634655b8e9c8f740

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90795
No description provided.