Fix T90795: Moving keys in Grease Pencil Dopesheet crashes Blender

`td->loc` is referenced but not initialized.